unlikely to ever use headless mode as we cannot install the generated deb on a server without required desktop installed